Simpler "make games" section

--- a/en/index.html
+++ b/en/index.html
@@ -98,16 +98,16 @@ layout: landing
                 <p> 
                   Ventilastation is ideal for games that are specifically designed for its circular display.
                 </p>
-                <p>
+                <!-- <p>
                   Unlike a traditional screen with square pixels, the spinning LEDs that make up the Ventilastation display are shaped like little arcs.
                   We call them "Arxels", and their size gets smaller when they are closer to the center of the fan.
-                </p>
+                </p> -->
                 <p>
                   To make it easier to create games, the <a href="https://micropython.org/">Micropython</a> programming language is embedded in the spinning ESP32 microcontroller.
                   And a computer-based emulator is available, so you can build and test your games before commiting to make a dedicated hardware console.
                 </p>
                 <p>
-                  A sprite-based coding library, with a design inspired in the Commodore 64 video chip allows up to 100 moving objects at once.
+                  <!-- A sprite-based coding library, with a design inspired in the Commodore 64 video chip allows up to 100 moving objects at once. -->
                   To start coding, we recommend browing the sample game Vyruss, which is less than 700 lines of code, available in <a href="https://github.com/ventilastation/vsdk/blob/main/apps/micropython/apps/vyruss.py">the project's repository.</a>
                 </p>
               </header>
