Make titles more assertive

--- a/en/index.html
+++ b/en/index.html
@@ -28,9 +28,9 @@ layout: landing
           <section id="what" class="wrapper style3 special">
             <div class="inner">
               <header class="major">
-                <h2>What's Ventilastation?</h2>
+                <h2>A big fan spinning lots of LEDs</h2>
                 <p>
-                  It's an open source game console with an odd display, for creating and playing circular video games. <br/>
+                  Ventilastation is an open source electromechanical game console with an odd display, built for creating and playing circular video games. <br/>
                   Fully designed, published and built in Argentina.
                 </p>
                 <p>
